掲示板作成のpresenterお助け

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mui/x-date-pickers": "^6.19.6",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
+    "@types/react-datepicker": "^6.0.3",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "igniteui-react-core": "^18.5.1",
     "igniteui-react-inputs": "^18.5.1",
     "igniteui-react-layouts": "^18.5.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
