--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
     "@types/react-datepicker": "^6.0.3",
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
@@ -30,6 +31,7 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
