--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "igniteui-react-inputs": "^18.5.1",
     "igniteui-react-layouts": "^18.5.1",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-media-recorder": "^1.6.5",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
